reverted to previous styling for scrollbar, some styling inconsistency and an issue where the font did not load

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @import url('sections/header_contact.css');
 
@@ -45,29 +45,15 @@ a {
     margin: 20px auto;  
     max-height: 48vh;
     overflow-y: auto;
-    scrollbar-width: thin;
-    scrollbar-color: #888 #f1f1f1;
 }
 
 .contacts-table::-webkit-scrollbar {
     width: 12px;
 }
 
-.contacts-table::-webkit-scrollbar-track {
-    background: #f1f1f1; 
-    border-radius: 10px; 
-}
-
 .contacts-table::-webkit-scrollbar-thumb {
-    background: #888; 
+    background: #888;
     border-radius: 10px; 
-}
-
-.contacts-table::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(45deg, 
-	#b8b1ff,#9646ad, #1a4fa3, #7e48ab, #b4eaf4);
-	background-size: 200% 200%;
-	animation: glowing-table 5s linear infinite;
 }
 
 .contacts-table table {
