--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900;&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 
 
@@ -65,7 +65,8 @@ a {
 .btn {
 	border: none;
 	outline: none;
-	color: white;
+	color: rgb(0, 0, 0);
+	box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 	cursor: pointer;
 	position: relative;
 	z-index: 0;
@@ -83,7 +84,7 @@ a {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: #000000;
+	background-color: #ffffff;
 	left: 0;
 	top: 0;
 	border-radius: 10px;
