--- a/css/styles_login.css
+++ b/css/styles_login.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900;&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap");
 
 :root {
@@ -115,12 +115,12 @@ body {
 	border: none;
 	outline: none;
 	background: #000000;
-	color: white;
+	color: rgb(255, 255, 255);
 	font-size: 20px;
 	border-radius: 40px;
 	cursor: pointer;
 	font-size: 16px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+	box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
 
 .form-container p a {
@@ -139,7 +139,7 @@ body {
 	border: none;
 	outline: none;
 	border-radius: 12px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+	box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 	cursor: pointer;
 	font-size: 16px;
 	color: #333;
